<?xml version="1.0" encoding="utf-8"?><!--
  ~ Licensed under the Mailchimp Mobile SDK License Agreement (the "License");
  ~ you may not use this file except in compliance with the License. Unless
  ~ required by applicable law or agreed to in writing, software distributed
  ~ under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES
  ~ OR CONDITIONS OF ANY KIND, either or express or implied.
  ~
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.mailchimp.sdkdemo.ui.NamedFieldLayout
                android:id="@+id/nfl_email_FAE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/email" />

            <com.mailchimp.sdkdemo.ui.NamedFieldLayout
                android:id="@+id/nfl_event_name_FAE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:label="@string/event_name" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/properties"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/optional"
                    android:textColor="@color/elephant" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <LinearLayout
                android:id="@+id/ll_add_on_fields_FAE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_add_pair"
                style="@style/button_secondary"
                android:text="@string/add_pair" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <Button
        android:id="@+id/btn_create_event"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/kale"
        android:text="@string/create_event"
        android:textColor="@color/white" />

</LinearLayout>