<?xml version="1.0" encoding="utf-8"?><!--
  ~ Licensed under the Mailchimp Mobile SDK License Agreement (the "License");
  ~ you may not use this file except in compliance with the License. Unless
  ~ required by applicable law or agreed to in writing, software distributed
  ~ under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES
  ~ OR CONDITIONS OF ANY KIND, either or express or implied.
  ~
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.mailchimp.sdkdemo.ui.NamedFieldLayout
                android:id="@+id/nfl_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:label="@string/email" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spnr_contact_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingTop="4dp"
                android:paddingBottom="8dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                android:background="@color/underline_gray" />

            <LinearLayout
                android:id="@+id/ll_add_on_fields"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@string/add_additional"
                    android:textColor="@color/black"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/optional"
                    android:textColor="@color/elephant" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.flexbox.FlexboxLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:alignContent="space_around"
                app:alignItems="center"
                app:flexWrap="wrap">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_add_tag"
                    style="@style/button_secondary"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/add_tag_short" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_remove_tag"
                    style="@style/button_secondary"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/remove_tag_short" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_add_merge_field"
                    style="@style/button_secondary"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/add_merge_field_short" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_add_address"
                    style="@style/button_secondary"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/add_address_field_short" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_add_marketing_permission"
                    style="@style/button_secondary"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/add_marketing_permission" />

            </com.google.android.flexbox.FlexboxLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </ScrollView>

    <Button
        android:id="@+id/btn_create_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/kale"
        android:text="@string/create_contact"
        android:textColor="@color/white" />


</androidx.appcompat.widget.LinearLayoutCompat>
